--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -114,3 +114,10 @@
   opacity: 0;
   background-color: firebrick;
 }
+
+.dropdown:hover .dropdown-menu {
+  display: block;
+  margin-top: 0;
+  right: 0;
+  left: auto;
+}
